--- a/jquery.fotorama.css
+++ b/jquery.fotorama.css
@@ -1,5 +1,5 @@
 /* Галерея изображений «Фоторама» */
-/* Версия 0.4 */
+/* Версия 0.5 */
 .fotorama__wrap {
   position: relative;
   overflow: hidden;
@@ -9,7 +9,6 @@
 }
 
 .fotorama__shadow {
-  content: "";
   display: block;
   position: absolute;
   text-decoration: none;
@@ -23,10 +22,10 @@
   -webkit-transition-property: all;
   -o-transition-property: all;
   transition-property: all;
-  -moz-transition-duration: 0.4s;
-  -webkit-transition-duration: 0.4s;
-  -o-transition-duration: 0.4s;
-  transition-duration: 0.4s;
+  -moz-transition-duration: 0.33s;
+  -webkit-transition-duration: 0.33s;
+  -o-transition-duration: 0.33s;
+  transition-duration: 0.33s;
   z-index: 10;
   *display: none;
 }
@@ -62,6 +61,9 @@
   white-space: nowrap;
   top: 0;
   left: 0;
+}
+
+.fotorama__wrap_style_touch .fotorama__shaft {
   cursor: move;
   cursor: -webkit-grab;
   cursor: -moz-grab;
@@ -70,8 +72,7 @@
   cursor: -khtml-grab;
   *cursor: move !important;
 }
-
-.fotorama__wrap_grabbing .fotorama__shaft {
+.fotorama__wrap_style_touch .fotorama__shaft_grabbing {
   cursor: -webkit-grabbing;
   cursor: -moz-grabbing;
   cursor: -o-grabbing;
@@ -88,6 +89,18 @@
   line-height: 0;
   text-align: center;
   position: relative;
+}
+
+.fotorama__thumbs-wrap {
+  text-align: left;
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+}
+.fotorama__thumbs-wrap {
+  *display: inline;
 }
 
 .fotorama__thumb {
@@ -162,6 +175,13 @@
   z-index: 5;
 }
 
+.fotorama__wrap_style_fade .fotorama__frame {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .fotorama__img, .fotorama__div {
   position: relative;
   max-width: 100%;
@@ -196,4 +216,72 @@
   -webkit-box-shadow: none;
   -o-box-shadow: none;
   box-shadow: none;
+}
+
+.fotorama__arr {
+  display: block;
+  position: absolute;
+  width: 2em;
+  text-align: center;
+  z-index: 10;
+  color: white;
+  -moz-transition-property: all;
+  -webkit-transition-property: all;
+  -o-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.33s;
+  -webkit-transition-duration: 0.33s;
+  -o-transition-duration: 0.33s;
+  transition-duration: 0.33s;
+  font-size: 24px;
+  line-height: 24px;
+  margin-top: -12px;
+  text-shadow: black 0 0 5px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.fotorama__arr_prev {
+  left: 0;
+  margin-left: -2em;
+  *margin-left: 0;
+}
+
+.fotorama__arr_next {
+  left: 100%;
+  margin-left: 0;
+  *margin-left: -2em;
+}
+
+.fotorama__arr_disabled {
+  cursor: default;
+}
+
+.fotorama__wrap:hover .fotorama__arr, .fotorama__wrap_touch .fotorama__arr {
+  opacity: 0.77;
+}
+.fotorama__wrap:hover .fotorama__arr:hover, .fotorama__wrap_touch .fotorama__arr:hover {
+  opacity: 0.99;
+}
+
+.fotorama__wrap:hover .fotorama__arr_prev, .fotorama__wrap_touch .fotorama__arr_prev, .fotorama__wrap_style_fade .fotorama__arr_prev {
+  margin-left: 0;
+}
+.fotorama__wrap:hover .fotorama__arr_next, .fotorama__wrap_touch .fotorama__arr_next, .fotorama__wrap_style_fade .fotorama__arr_next {
+  margin-left: -2em;
+}
+.fotorama__wrap:hover .fotorama__arr_disabled, .fotorama__wrap_touch .fotorama__arr_disabled, .fotorama__wrap_style_fade .fotorama__arr_disabled {
+  opacity: 0.11;
+}
+
+.fotorama__wrap_style_fade .fotorama__arr {
+  -moz-transition-property: opacity;
+  -webkit-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+  -moz-transition-duration: 0.33s;
+  -webkit-transition-duration: 0.33s;
+  -o-transition-duration: 0.33s;
+  transition-duration: 0.33s;
+  opacity: 0;
 }
