--- a/fotorama.scss
+++ b/fotorama.scss
@@ -1,6 +1,6 @@
 @import "compass";
 
-/* Галерея изображений «Фоторама» */
+/* Галерея изображений «Фоторама», версия 1.0 */
 
 $transitionDuration: 333ms;
 $backgroundColor: #222120;
