По-другому указал версии в файлах, поставил ссылку на сайт

--- a/fotorama.scss
+++ b/fotorama.scss
@@ -1,6 +1,6 @@
 @import "compass";
 
-/* Галерея изображений «Фоторама», версия 1.0 */
+/* Fotorama v1.0 (1151) http://fotoramajs.com/ */
 
 $transitionDuration: 333ms;
 $backgroundColor: #222120;
