--- a/fotorama.scss
+++ b/fotorama.scss
@@ -284,6 +284,7 @@ $arrWidth: 24px + 20;
 	text-shadow: black 0 0 5px;
 	cursor: pointer;
 	opacity: 0;
+	font-style: normal;
 	-webkit-tap-highlight-color: rgba(255,255,255,.15);
 }
 
