--- a/fotorama.scss
+++ b/fotorama.scss
@@ -197,6 +197,11 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 		border-color: #00d1ff mix(#00d1ff,#008ed6) #008ed6;
 		position: absolute;
 		z-index: 10;
+		-webkit-box-sizing: content-box;
+		-moz-box-sizing: content-box;
+		-o-box-sizing: content-box;
+		-ms-box-sizing: content-box;
+		box-sizing: content-box;
 	}
 }
 
