--- a/fotorama.css
+++ b/fotorama.css
@@ -1,5 +1,6 @@
 /* Fotorama v1.0 (1156) http://fotoramajs.com/ */
-.fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); -webkit-backface-visibility: hidden; }
+.fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+.fotorama * { -webkit-backface-visibility: hidden; }
 
 .fotorama__wrap { position: relative; overflow: hidden; *zoom: 1; white-space: nowrap; font-size: 0; line-height: 0; background-color: #222120; -webkit-user-select: none; -moz-user-select: none; -o-user-select: none; -ms-user-select: none; }
 
@@ -18,7 +19,7 @@
 
 .fotorama__shaft { position: absolute; top: 0; left: 0; }
 
-.fotorama__wrap_csstransitions .fotorama__wrap_style_touch .fotorama__shaft { -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); -webkit-backface-visibility: hidden; }
+.fotorama__wrap_csstransitions .fotorama__wrap_style_touch .fotorama__shaft { -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 
 .fotorama__wrap_style_touch .fotorama__shaft { cursor: move; cursor: -webkit-grab; cursor: -moz-grab; cursor: -o-grab; *cursor: move !important; }
 .fotorama__wrap_style_touch .fotorama__shaft_grabbing { cursor: -webkit-grabbing; cursor: -moz-grabbing; cursor: -o-grabbing; }
@@ -52,10 +53,10 @@
 .fotorama__thumbs_previews .fotorama__thumb_selected .fotorama__thumb__img, .fotorama__thumbs_previews .fotorama__thumb:hover .fotorama__thumb__img { -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
 .fotorama__thumbs_previews .fotorama__thumb-border { border: solid; border-color: #00d1ff #00afea #008ed6; position: absolute; z-index: 10; -webkit-box-sizing: content-box; -moz-box-sizing: content-box; -o-box-sizing: content-box; -ms-box-sizing: content-box; box-sizing: content-box; }
 
-.fotorama__wrap_csstransitions .fotorama__thumbs_previews .fotorama__thumbs-shaft { -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); -webkit-backface-visibility: hidden; }
-.fotorama__wrap_csstransitions .fotorama__thumbs_previews .fotorama__thumb-border { -webkit-transition-property: -webkit-transform, width; -moz-transition-property: -moz-transform, width; -o-transition-property: -o-transform, width; transition-property: transform, width; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); -webkit-backface-visibility: hidden; }
+.fotorama__wrap_csstransitions .fotorama__thumbs_previews .fotorama__thumbs-shaft { -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
+.fotorama__wrap_csstransitions .fotorama__thumbs_previews .fotorama__thumb-border { -moz-transition-property: all; -webkit-transition-property: all; -o-transition-property: all; transition-property: all; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 
-.fotorama__frame { text-align: center; position: absolute; top: 0; background-color: #222120; -webkit-backface-visibility: hidden; }
+.fotorama__frame { text-align: center; position: absolute; top: 0; left: -9999px; background-color: #222120; }
 
 .fotorama__wrap_csstransitions.fotorama__wrap_style_fade .fotorama__frame { -moz-transition-property: opacity; -webkit-transition-property: opacity; -o-transition-property: opacity; transition-property: opacity; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); opacity: 1; }
 
@@ -66,7 +67,7 @@
 .fotorama__img { position: relative; max-width: 100%; text-align: center; margin: 0 auto; white-space: normal; }
 .fotorama__img img { max-width: 100%; margin: auto; }
 
-.fotorama__arr { display: block; position: absolute; font-family: Arial, Helvetica, sans-serif; width: 44px; text-align: center; z-index: 10; color: white; -moz-transition-property: opacity, margin-left; -webkit-transition-property: opacity, margin-left; -o-transition-property: opacity, margin-left; transition-property: opacity, margin-left; -moz-transition-duration: 333ms; -webkit-transition-duration: 333ms; -o-transition-duration: 333ms; transition-duration: 333ms; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-backface-visibility: hidden; font-size: 24px; line-height: 72px; margin-top: -36px; text-shadow: black 0 0 5px; cursor: pointer; opacity: 0; font-style: normal; -webkit-tap-highlight-color: rgba(255, 255, 255, 0.15); }
+.fotorama__arr { display: block; position: absolute; font-family: Arial, Helvetica, sans-serif; width: 44px; text-align: center; z-index: 10; color: white; -moz-transition-property: opacity, margin-left; -webkit-transition-property: opacity, margin-left; -o-transition-property: opacity, margin-left; transition-property: opacity, margin-left; -moz-transition-duration: 333ms; -webkit-transition-duration: 333ms; -o-transition-duration: 333ms; transition-duration: 333ms; -moz-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.25, 0, 0.25, 1); font-size: 24px; line-height: 72px; margin-top: -36px; text-shadow: black 0 0 5px; cursor: pointer; opacity: 0; font-style: normal; -webkit-tap-highlight-color: rgba(255, 255, 255, 0.15); }
 
 .fotorama__arr_prev { left: 0; margin-left: 0; *margin-left: 0 !important; }
 
@@ -89,3 +90,12 @@
 .fotorama__wrap_mouseout .fotorama__arr_next { margin-left: 0; }
 
 .fotorama__caption { font-size: 13px; line-height: 16px; margin: .5em 0; white-space: normal; }
+
+.fotorama__state { position: absolute; color: #fff; width: 80px; height: 80px; margin-left: -40px; margin-top: -40px; line-height: 80px; font-size: 80px; font-family: 'Times New Roman', Times, serif; letter-spacing: 1px; text-transform: uppercase; background-color: #222120; background-color: rgba(34, 33, 32, 0.5); text-align: center; display: none; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; -ms-border-radius: 50%; -khtml-border-radius: 50%; border-radius: 50%; background-repeat: no-repeat; }
+
+.fotorama_loading .fotorama__state { letter-spacing: -10px; }
+.fotorama_loading .fotorama__state span { position: relative; left: -5px; }
+.fotorama_loading .fotorama__thumb-border { border-style: dashed; }
+
+.fotorama_error .fotorama__state { font-size: 80px; }
+.fotorama_error .fotorama__thumb-border { border-style: dashed; }
