--- a/fotorama.scss
+++ b/fotorama.scss
@@ -8,7 +8,10 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 
 .fotorama {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-webkit-backface-visibility: hidden;
+	
+	* {
+		-webkit-backface-visibility: hidden;
+	}
 }
 
 .fotorama__wrap {
@@ -84,7 +87,7 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 			@include transition-duration(0);
 			@include transition-timing-function($bezier);
 			@include transform(translate3d(0,0,0));
-			-webkit-backface-visibility: hidden;
+
 		}
 	}
 }
@@ -183,9 +186,14 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 		margin-left: 0 !important;
 		width: auto;
 	}
+	img {
+		//position:relative;
+		//left: -9999px;
+	}
 	.fotorama__thumb__img {
 		//width: auto;
 		@include opacity(0.66);
+		//left: 0;
 	}
 	.fotorama__thumb_selected, .fotorama__thumb:hover {
 		.fotorama__thumb__img {
@@ -215,17 +223,14 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 			@include transition-duration(0);
 			@include transition-timing-function($bezier);
 			@include transform(translate3d(0, 0, 0));
-			-webkit-backface-visibility: hidden;
+
 		}
 		.fotorama__thumb-border {
-			-webkit-transition-property: -webkit-transform, width;
-			-moz-transition-property: -moz-transform, width;
-			-o-transition-property: -o-transform, width;
-			transition-property: transform, width;
+			@include transition-property(all);
 			@include transition-duration(0);
 			@include transition-timing-function($bezier);
 			@include transform(translate3d(0, 0, 0));
-			-webkit-backface-visibility: hidden;
+
 		}
 	}
 }
@@ -234,8 +239,9 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 	text-align: center;
 	position: absolute;
 	top: 0;
+	left: -9999px;
 	background-color: $backgroundColor;
-	-webkit-backface-visibility: hidden;
+
 }
 
 .fotorama__wrap_csstransitions.fotorama__wrap_style_fade {
@@ -282,7 +288,7 @@ $arrWidth: 24px + 20;
 	@include transition-property((opacity, margin-left));
 	@include transition-duration($transitionDuration);
 	@include transition-timing-function($bezier);
-	-webkit-backface-visibility: hidden;
+
 	font-size: 24px;
 	line-height: 24px*3;
 	margin-top: -(24px*3/2);
@@ -366,4 +372,49 @@ $arrWidth: 24px + 20;
 	//background: $backgroundColor;
 	//color: #fff;
 	//opacity: .88;
+}
+
+.fotorama__state {
+	position: absolute;
+	color: #fff;
+	width: 80px;
+	height: 80px;
+	margin-left: -40px;
+	margin-top: -40px;
+	line-height: 80px;
+	font-size: 80px;
+	font-family: 'Times New Roman', Times, serif;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	background-color: $backgroundColor;
+	background-color: rgba(34,33,32,.5);
+	text-align: center;
+	display: none;
+	@include border-radius(50%);
+	background-repeat: no-repeat;
+}
+
+.fotorama_loading {
+	.fotorama__state {
+		//display: block;
+		letter-spacing: -10px;
+		span {
+			position: relative;
+			left: -5px;
+		}
+	}
+	.fotorama__thumb-border	{
+		border-style: dashed;
+	}
+}
+
+.fotorama_error {
+	.fotorama__state {
+		//display: block;
+		font-size: 80px;
+	}
+	.fotorama__thumb-border	{
+	  //border-color: #ff002a mix(#ff002a, #cc0000) #cc0000 !important;
+		border-style: dashed;
+	}
 }
