--- a/fotorama.scss
+++ b/fotorama.scss
@@ -239,7 +239,7 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 	text-align: center;
 	position: absolute;
 	top: 0;
-	left: -9999px;
+	left: 0;
 	background-color: $backgroundColor;
 
 }
@@ -265,14 +265,10 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 
 .fotorama__img {
 	position: relative;
-	max-width: 100%;
-	text-align: center;
-	margin: 0 auto;
-	white-space: normal;
-	img {
-		max-width: 100%;
-		margin: auto;
-	}
+	//max-width: 100%;
+	//text-align: center;
+	//margin: 0 auto;
+	//white-space: normal;
 }
 
 $arrWidth: 24px + 20;
@@ -392,6 +388,7 @@ $arrWidth: 24px + 20;
 	display: none;
 	@include border-radius(50%);
 	background-repeat: no-repeat;
+	z-index: 4;
 }
 
 .fotorama_loading {
