--- a/fotorama.scss
+++ b/fotorama.scss
@@ -1,6 +1,6 @@
 @import "compass";
 
-/* Fotorama v1.0 (1156) http://fotoramajs.com/ */
+/* Fotorama v1.0 (1159) http://fotoramajs.com/ */
 
 $transitionDuration: 333ms;
 $backgroundColor: #222120;
@@ -222,14 +222,14 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 			transition-property: transform;
 			@include transition-duration(0);
 			@include transition-timing-function($bezier);
-			@include transform(translate3d(0, 0, 0));
+			@include transform(translate3d(0,0,0));
 
 		}
 		.fotorama__thumb-border {
 			@include transition-property(all);
 			@include transition-duration(0);
 			@include transition-timing-function($bezier);
-			@include transform(translate3d(0, 0, 0));
+			@include transform(translate3d(0,0,0));
 
 		}
 	}
