--- a/fotorama.scss
+++ b/fotorama.scss
@@ -191,7 +191,8 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 		//left: -9999px;
 	}
 	.fotorama__thumb__img {
-		//width: auto;
+		width: auto;
+		//height: auto;
 		@include opacity(0.66);
 		//left: 0;
 	}
