--- a/fotorama.css
+++ b/fotorama.css
@@ -1,5 +1,5 @@
 /* Fotorama v1.0 (1159) http://fotoramajs.com/ */
-.fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+.fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); *zoom: 1; }
 .fotorama * { -webkit-backface-visibility: hidden; }
 
 .fotorama__wrap { position: relative; overflow: hidden; *zoom: 1; white-space: nowrap; font-size: 0; line-height: 0; background-color: #222120; -webkit-user-select: none; -moz-user-select: none; -o-user-select: none; -ms-user-select: none; }
