--- a/fotorama.scss
+++ b/fotorama.scss
@@ -8,7 +8,7 @@ $bezier: cubic-bezier(0.25, 0, 0.25, 1);
 
 .fotorama {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	
+	*zoom: 1;
 	* {
 		-webkit-backface-visibility: hidden;
 	}
