--- a/fotorama.css
+++ b/fotorama.css
@@ -1,4 +1,4 @@
-/* Fotorama v1.0 (1160) http://fotoramajs.com/ */
+/* Fotorama v1.0 (1161) http://fotoramajs.com/ */
 .fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); *zoom: 1; }
 .fotorama * { -webkit-backface-visibility: hidden; }
 
@@ -97,4 +97,4 @@
 .fotorama_loading .fotorama__thumb-border { border-style: dashed; }
 
 .fotorama_error .fotorama__state { font-size: 80px; }
-.fotorama_error .fotorama__thumb-border { border-style: dashed; }
+.fotorama_error .fotorama__thumb-border { border-color: #ff002a #e50015 #cc0000 !important; border-style: dashed; }
