--- a/fotorama.scss
+++ b/fotorama.scss
@@ -387,7 +387,7 @@ $arrWidth: 24px + 20;
 	background-color: rgba(34,33,32,.5);
 	text-align: center;
 	display: none;
-	@include border-radius(50%);
+	@include border-radius(40px);
 	background-repeat: no-repeat;
 	z-index: 6;
 }
