Revert aa283b35242330a61c3178c7d36da78ded10cac8^..HEAD

--- a/fotorama.css
+++ b/fotorama.css
@@ -92,6 +92,7 @@
 
 .fotorama__state { position: absolute; color: #fff; width: 80px; height: 80px; margin-left: -40px; margin-top: -40px; line-height: 80px; font-size: 80px; font-family: 'Times New Roman', Times, serif; letter-spacing: 1px; text-transform: uppercase; background-color: #222120; background-color: rgba(34, 33, 32, 0.75); text-align: center; display: none; -moz-border-radius: 40px; -webkit-border-radius: 40px; -o-border-radius: 40px; -ms-border-radius: 40px; -khtml-border-radius: 40px; border-radius: 40px; background-repeat: no-repeat; z-index: 6; }
 
+.fotorama_loading * { cursor: -webkit-wait; cursor: -moz-wait; cursor: -o-wait; cursor: wait; }
 .fotorama_loading .fotorama__state { letter-spacing: -10px; }
 .fotorama_loading .fotorama__state span { position: relative; left: -5px; }
 .fotorama_loading .fotorama__thumb-border { border-style: dashed; }
