--- a/fotorama.css
+++ b/fotorama.css
@@ -1,4 +1,4 @@
-/* Fotorama 1.1 (v1173) http://fotoramajs.com/ */
+/* Fotorama 1.3 (v1176) http://fotoramajs.com/ */
 .fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); *zoom: 1; position: relative; }
 .fotorama * { -webkit-backface-visibility: hidden; }
 
@@ -60,7 +60,7 @@
 .fotorama__thumbs_previews { overflow: hidden; background-color: #222120; }
 .fotorama__thumbs_previews .fotorama__thumbs-shaft { position: absolute; top: 0; left: 0; }
 .fotorama__thumbs_previews .fotorama__thumb { float: left; display: inline; width: auto; }
-.fotorama__thumbs_previews .fotorama__thumb__img { width: auto; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=66)"; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=66); opacity: 0.66; }
+.fotorama__thumbs_previews .fotorama__thumb__img { width: auto; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=66)"; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=66); opacity: 0.66; border: none; margin: 0; padding: 0; }
 .fotorama__thumbs_previews .fotorama__thumb_selected .fotorama__thumb__img, .fotorama__thumbs_previews .fotorama__thumb:hover .fotorama__thumb__img { -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
 .fotorama__thumbs_previews .fotorama__thumb-border { border: solid; border-color: #00d1ff #00afea #008ed6; position: absolute; z-index: 10; -webkit-box-sizing: content-box; -moz-box-sizing: content-box; -o-box-sizing: content-box; -ms-box-sizing: content-box; box-sizing: content-box; }
 
