--- a/fotorama.css
+++ b/fotorama.css
@@ -1,4 +1,4 @@
-/* Fotorama 1.4 (v1199) http://fotoramajs.com/ */
+/* Fotorama 1.5 (v1200) http://fotoramajs.com/ */
 .fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); *zoom: 1; position: relative; }
 .fotorama * { -webkit-backface-visibility: hidden; }
 
@@ -67,7 +67,6 @@
 .fotorama_vertical .fotorama__thumbs_previews .fotorama__thumb { float: none; display: block; margin-top: 0 !important; }
 
 .fotorama_csstransitions .fotorama__thumbs_previews .fotorama__thumbs-shaft { -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
-.fotorama_csstransitions .fotorama__thumbs_previews .fotorama__thumbs-shaft_out { -moz-transition-timing-function: cubic-bezier(0, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0, 0, 0.25, 1); transition-timing-function: cubic-bezier(0, 0, 0.25, 1); }
 .fotorama_csstransitions .fotorama__thumbs_previews .fotorama__thumb-border { -moz-transition-property: all; -webkit-transition-property: all; -o-transition-property: all; transition-property: all; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 
 .fotorama__frame { text-align: center; position: absolute; top: 0; left: 0; margin: 0; padding: 0; background-color: #323130; }
@@ -78,7 +77,7 @@
 
 .fotorama__wrap_style_fade .fotorama__frame { left: 0; }
 
-.fotorama__img { position: relative; }
+.fotorama__img { position: relative; margin: 0 !important; }
 
 .fotorama__arr { display: block; position: absolute; font-family: Arial, Helvetica, sans-serif; width: 44px; text-align: center; z-index: 10; color: white; -moz-transition-property: opacity, margin; -webkit-transition-property: opacity, margin; -o-transition-property: opacity, margin; transition-property: opacity, margin; -moz-transition-duration: 333ms; -webkit-transition-duration: 333ms; -o-transition-duration: 333ms; transition-duration: 333ms; -moz-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); font-size: 24px; top: 50%; line-height: 72px; margin-top: -36px; text-shadow: black 0 0 5px; cursor: pointer; opacity: 0; font-style: normal; -webkit-tap-highlight-color: rgba(255, 255, 255, 0.15); }
 
