v1205: cropToFit, исправления ЦСС

--- a/fotorama.sass
+++ b/fotorama.sass
@@ -1,6 +1,6 @@
 @import compass
 
-/* Fotorama 1.5 (v1203) http://fotoramajs.com/
+/* Fotorama 1.5 (v1205) http://fotoramajs.com/
 
 $transitionDuration: 333ms
 $backgroundColor: #323130
@@ -241,6 +241,7 @@ $bezier2: cubic-bezier(0, 0, 0.25, 1)
 .fotorama__frame
   text-align: center
   position: absolute
+  overflow: hidden
   top: 0
   left: 0
   margin: 0
