--- a/fotorama.css
+++ b/fotorama.css
@@ -1,4 +1,4 @@
-/* Fotorama 1.5 (v1203) http://fotoramajs.com/ */
+/* Fotorama 1.5 (v1205) http://fotoramajs.com/ */
 .fotorama { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); *zoom: 1; position: relative; }
 .fotorama * { -webkit-backface-visibility: hidden; }
 
@@ -68,7 +68,7 @@
 .fotorama_csstransitions .fotorama__thumbs_previews .fotorama__thumbs-shaft { -webkit-transition-property: -webkit-transform; -moz-transition-property: -moz-transform; -o-transition-property: -o-transform; transition-property: transform; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 .fotorama_csstransitions .fotorama__thumbs_previews .fotorama__thumb-border { -moz-transition-property: all; -webkit-transition-property: all; -o-transition-property: all; transition-property: all; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -moz-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
 
-.fotorama__frame { text-align: center; position: absolute; top: 0; left: 0; margin: 0; padding: 0; background-color: #323130; }
+.fotorama__frame { text-align: center; position: absolute; overflow: hidden; top: 0; left: 0; margin: 0; padding: 0; background-color: #323130; }
 
 .fotorama_csstransitions.fotorama__wrap_style_fade .fotorama__frame { -moz-transition-property: opacity; -webkit-transition-property: opacity; -o-transition-property: opacity; transition-property: opacity; -moz-transition-duration: 0; -webkit-transition-duration: 0; -o-transition-duration: 0; transition-duration: 0; -moz-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -webkit-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); -o-transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); transition-timing-function: cubic-bezier(0.1, 0, 0.25, 1); opacity: 1; }
 
